# ccodebox

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml
backend/: .env.example  Cargo.toml
backend/src/: config.rs  consts.rs  contracts.rs  frontend.rs  main.rs
backend/src/adapter/: claude_code.rs  codex.rs  mod.rs
backend/src/api/: mod.rs  projects.rs  tasks.rs  templates.rs
backend/src/container/: images.rs  manager.rs
backend/src/db/: mod.rs
backend/src/engine/: mod.rs  stage.rs  task.rs  task_type.rs
backend/src/entity/: mod.rs  platform_config.rs  project.rs  stage_run.rs  task.rs  task_log.rs  template.rs
backend/src/models/: mod.rs  settings.rs  task.rs
backend/src/workspace/: mod.rs
backend/task-types/: feature-dev.yaml  single-stage.yaml
docs/: frontend-interaction-spec.md  frontend-revision-v1.md  phase1-env-design.md  phase1-exec-plan.md  phase1-supplement.md  phase2-packaging.md  v2-refactor.md  v2.5-frontend-orchestration.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: client.tsx  page.tsx
frontend/src/app/projects/[id]/tasks/[taskId]/: client.tsx  page.tsx
frontend/src/app/projects/[id]/tasks/new/: client.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tasks/[id]/: client.tsx  page.tsx
frontend/src/app/tasks/new/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/components/: AgentLogViewer.tsx  DiffViewer.tsx  LogViewer.tsx  MarkdownViewer.tsx  PromptViewer.tsx  StatusBadge.tsx  TaskCard.tsx  TaskDetail.tsx  TaskForm.tsx
frontend/src/components/ui/: dialog.tsx  select.tsx
frontend/src/lib/: api.ts  types.generated.ts
images/base/: Dockerfile
images/claude-code/: Dockerfile
images/codex/: Dockerfile
scripts/: check_contracts.sh  entrypoint.sh  gen_types.sh  sync-types.sh  system-rules.md  tavily-search
