[package]
name = "ccodebox-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Container orchestration
bollard = "0.18"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Type generation for frontend
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# Async trait
async-trait = "0.1"

# Tar archive (for reading files from containers)
tar = "0.4"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
