[package]
name = "ccodebox-backend"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ccodebox"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SeaORM entity-first)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Type generation for frontend
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# Async trait
async-trait = "0.1"

# HTTP client (for testing external API keys)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Embed frontend static files into binary
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
